@@ -1,3 +1,6 @@
+HEAD
+	+ Show complex types (more than one field) in audit log
+	  while editing by storing the dump of the value
 3.0.32
 	+ Display remote services messages if they exist on Dashboard
 	+ Fixed mdstat output processing to remove "(auto-read-only)"
